2003-03-30  Andrew Sobala  <aes@gnome.org>

	* gnome-window-settings-2.0.pc.in:
	s/-lwindow-settings/-lgnome-window-settings/

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

2003-01-19  Mikael Hallendal  <micke@codefactory.se>

	* metacity-window-manager.c:
	(add_themes_from_dir): Fixed bug that caused not all themes to be
	  loaded properly.

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2003-01-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=101433
	* gnome-window-manager.c
	(gnome_window_manager_get_double_click_actions) : fix trivial
	stupidity.  How did this last so long ?

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

Thu Oct 31 17:52:31 2002  Jonathan Blandford  <jrb@gnome.org>

	* metacity-window-manager.c (metacity_get_theme_list): Get the
	themes from the new location, instead of the old one.

	* metacity-window-manager.c (metacity_get_settings): simplify
	logic and fix bug.

2002-10-26  Havoc Pennington  <hp@pobox.com>

	* gnome-window-manager.c: handle NULL fields in the class struct;
	and replace the individual setters with get/set for a big 
	struct with flags indicating which fields we care about, 
	a la a graphics context. Add settings_changed signal.
	(gnome_window_manager_get_type): change object name to
	GnomeWindowManager not GWindowManager

	* gnome-window-manager.h (struct _GnomeWindowManagerClass): add
	padding to the class struct

	* Makefile.am: move metacity module here from capplets/windows/
	(libgnome_window_settings_la_SOURCES): don't build the code to
	switch window managers, it was bitrotted and broken anyway, and