@@ -1,3 +1,8 @@
+Fri May  2 17:48:07 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* metacity-window-manager.c (add_themes_from_dir): better error
+	checking.
+
 2003-03-30  Andrew Sobala  <aes@gnome.org>
 
 	* gnome-window-settings-2.0.pc.in:
